--- a/src/Component/Styles/registration.css
+++ b/src/Component/Styles/registration.css
@@ -1,8 +1,32 @@
 .registration-container{
-    align-items: center;
+    align-items: start;
     @media (max-width: 600px) {
      align-items: start;       
-     margin-top: 100px;
+     /* margin-top: 100px; */
         
     }
+}
+
+.questions{
+    font-size: 1.2rem;
+}
+.stepper-container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.inputs-container{
+    margin-top: 80px;
+}
+.reg-button{
+margin-top: 200px !important;
+@media (max-width: 600px) {
+    margin-top: 0px !important;
+   }
+}
+.width-control {
+    width: 60%;
+    @media (max-width: 600px) {
+        width: 95%;
+       }
 }
