--- a/src/Component/Styles/footer.css
+++ b/src/Component/Styles/footer.css
@@ -1,5 +1,5 @@
 .footer{
-    background-color:#f85c70 ;
+    background-color:#abb8c3 ;
     height: 50px;
     display: flex;
     justify-content: center;
