--- a/src/Component/Styles/header.css
+++ b/src/Component/Styles/header.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
     box-shadow: none !important;
-    background-color: #f85c70;
+    background-color: #abb8c3;
 
 }
 @media (max-width: 600px) {
@@ -14,7 +14,7 @@
     }
 }
 .content{
-    width: 60%;
+    width: 70%;
     display: flex;
     justify-content: space-between;
     margin: auto;
