--- a/src/Component/Styles/home.css
+++ b/src/Component/Styles/home.css
@@ -2,7 +2,8 @@
     margin: 50px auto auto;
     display: flex;
     flex-direction: column;
-    width: 80%;
+    min-height: calc(100vh - 70px);
+    width: 70%;
 }
 @media (max-width: 600px) {
     .home-container {
@@ -41,6 +42,8 @@ ul li span{
     font-size: .8rem;
     font-weight: 700;
     color: grey;
+    background-color: red;
+    padding: 3px 5px;
 }
 .card-container{
     display: flex;
